--- a/ruoyi-admin/src/main/resources/static/website/about.html
+++ b/ruoyi-admin/src/main/resources/static/website/about.html
@@ -33,10 +33,10 @@
             <div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active" style="border-radius:3px 4px 5px 6px;"><a href="index.html">首页</a></li>
-					<li><a href="website/about.html">关于我们</a></li>
-					<li><a href="website/courses.html">学生佳绩</a></li>
-					<li><a href="website/price.html">课程简介</a></li>
-					<li><a href="website/videos.html">班型简介</a></li>
+					<li><a href="about.html">关于我们</a></li>
+					<li><a href="courses.html">学生佳绩</a></li>
+					<li><a href="price.html">课程简介</a></li>
+					<li><a href="videos.html">班型简介</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">院校选择<b class="caret"></b></a>
 						<ul class="dropdown-menu">
@@ -46,8 +46,8 @@
 							<li><a  th:inline="none" href="#">Dummy Link3</a></li>
 						</ul>
 					</li>
-					<li><a href="website/courses.html">一点资讯</a></li>
-					<li><a href="website/contact.html">联系我们</a></li>
+					<li><a href="courses.html">一点资讯</a></li>
+					<li><a href="contact.html">联系我们</a></li>
 				</ul>
 			</div>
             <!--/.nav-collapse -->
