--- a/ruoyi-admin/src/main/resources/static/website/index.html
+++ b/ruoyi-admin/src/main/resources/static/website/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="chinaz">
 	<meta name="author" content="webThemez.com">
-	<title>觅峰教育</title>
+	<title>步步高教育电子</title>
 	<link rel="favicon" href="../assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="#css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
